# Targeted-Adversarial-Attacks-on-Sentiment-Analysis-Models

./: README.md  chameleon.md  environment.yml  environment_Giskard.yml  paper-review.md  pyproject.toml  run_test_script.sh
demo/: demo.ipynb
src/chameleon/: __init__.py
src/chameleon/models/: __init__.py  base.py  huggingface.py
src/chameleon/probes/: Giskard_TextCraft.py  TextCraft.py  __init__.py  base.py
src/chameleon/utils/: Paraphrasing.py  attack_utils.py  constraints.py  goal_functions.py
tests/: test_huggingface_model.py  test_script.py
